[gd_scene load_steps=12 format=3 uid="uid://dojqniic322hs"]

[ext_resource type="Script" uid="uid://dwt8ccrpkobrw" path="res://Godot script/Scenes Script/sign_up_page.gd" id="1_kljoo"]
[ext_resource type="Texture2D" uid="uid://cirigx8w17xfk" path="res://Images/game_logo.png" id="2_h1pxh"]
[ext_resource type="FontFile" uid="uid://cpp8fwktl7xll" path="res://Fonts/helvetica-rounded-bold-5871d05ead8de.otf" id="2_n38k3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_skapt"]
bg_color = Color(0, 0.0352941, 0.0980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lchvc"]
bg_color = Color(1, 1, 1, 1)
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ndvqa"]
bg_color = Color(0.643137, 0.643137, 0.643137, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xj0oh"]
bg_color = Color(0.643137, 0.643137, 0.643137, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a5wv0"]
bg_color = Color(0.0196078, 0.305882, 0.596078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kljoo"]
bg_color = Color(0.0156863, 0.207843, 0.415686, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ijdwd"]
bg_color = Color(0.0196078, 0.305882, 0.596078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n38k3"]
bg_color = Color(0.0156863, 0.207843, 0.415686, 1)

[node name="Control2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kljoo")

[node name="MainBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_skapt")

[node name="LogInContainer" type="Panel" parent="MainBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -301.0
offset_top = -263.0
offset_right = 301.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lchvc")

[node name="InputContainer" type="VBoxContainer" parent="MainBackground/LogInContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -271.0
offset_top = -177.5
offset_right = 271.0
offset_bottom = 211.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Username" type="LineEdit" parent="MainBackground/LogInContainer/InputContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_ndvqa")
placeholder_text = "Username"

[node name="Email" type="LineEdit" parent="MainBackground/LogInContainer/InputContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_xj0oh")
placeholder_text = "Email"

[node name="Password" type="LineEdit" parent="MainBackground/LogInContainer/InputContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_xj0oh")
placeholder_text = "Password"
secret = true

[node name="Confirm_pass" type="LineEdit" parent="MainBackground/LogInContainer/InputContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_xj0oh")
placeholder_text = "Confirm password"
secret = true

[node name="CreateAccountButton" type="Button" parent="MainBackground/LogInContainer/InputContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_n38k3")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_a5wv0")
theme_override_styles/normal = SubResource("StyleBoxFlat_kljoo")
text = "Create Account"

[node name="Button" type="Button" parent="MainBackground/LogInContainer/InputContainer"]
custom_minimum_size = Vector2(100, 70)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_n38k3")
theme_override_font_sizes/font_size = 25
theme_override_styles/hover = SubResource("StyleBoxFlat_ijdwd")
theme_override_styles/normal = SubResource("StyleBoxFlat_n38k3")
text = "Back"

[node name="SignUpText" type="Label" parent="MainBackground/LogInContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -175.0
offset_top = 26.0
offset_right = 263.0
offset_bottom = 76.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_n38k3")
theme_override_font_sizes/font_size = 20
text = "Sign Up"

[node name="GameLogo" type="TextureRect" parent="MainBackground/LogInContainer"]
modulate = Color(1, 1, 1, 0.960784)
layout_mode = 0
offset_left = -24.0
offset_top = -40.0
offset_right = 158.0
offset_bottom = 126.0
texture = ExtResource("2_h1pxh")
expand_mode = 1

[connection signal="pressed" from="MainBackground/LogInContainer/InputContainer/CreateAccountButton" to="." method="_on_create_account_button_pressed"]
[connection signal="pressed" from="MainBackground/LogInContainer/InputContainer/Button" to="." method="_on_button_pressed"]
